--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,38 @@ server:
 spring:
   application:
     name: front-service
+  security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            client-id: Ls6WyHuxYiWHBYscrLYB
+            client-secret: eezxJFpaU2
+            scope:
+              - name
+              - nickname
+              - mobile
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http:/localhost:9002/oauth/naver/callback
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+  profiles:
+    include: private
 
 msa:
   edge-service-url: http://localhost:9001
+
+oauth:
+  naver:
+    client-id: Ls6WyHuxYiWHBYscrLYB
+    client-secret: eezxJFpaU2
+    redirect-uri: http://localhost:9002/oauth/naver/callback
+    state: 1234
+  kakao:
+    client-id: 9e4af8cd72b29e0dea144d556907435e
+    redirect-uri: http://localhost:9002/oauth/kakao/callback
