--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // JWT 이용하기 위한 라이브러리 3개
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'  // JWT API
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'    // JWT 구현체
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리를 위한 Jackson 모듈
+
+    implementation 'org.json:json:20250107'
 }
 
 dependencyManagement {
