--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    // Feign Form (Multipart 지원)
+    implementation 'io.github.openfeign.form:feign-form-spring:3.8.0'
     implementation "io.github.openfeign:feign-httpclient"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly 'org.projectlombok:lombok'
