email verify & join update

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     // Feign Form (Multipart 지원)
     implementation 'io.github.openfeign.form:feign-form-spring:3.8.0'
     implementation "io.github.openfeign:feign-httpclient"
