--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,4 +64,4 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f front-service/k8s/
+          kubectl apply -f k8s/
