--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,10 @@ jobs:
         run: |
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/front-service:latest
 
+      - name: Substitute environment variables in deployment file
+        run: |
+          export DOMAIN_NAME=jurang-park.site
+          envsubst < k8s/front-deployment.template.yml > k8s/front-deployment.yml
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s/
+          kubectl apply -f k8s/front-deployment.yml
