--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,7 +15,7 @@ spec:
         role: websocket
       containers:
         - name: front-service
-          image: 448049828702.dkr.ecr.ap-northeast-2.amazonaws.com/front-service:latest
+          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/front-service:latest
           imagePullPolicy: Always
           lifecycle:
             preStop:
