--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,9 @@ jobs:
           export AWS_REGION=${{ secrets.AWS_REGION }}
           envsubst < k8s/deployment.yml > k8s/deployment.rendered.yml
 
+      - name: Debug print DOMAIN_NAME
+        run: echo $DOMAIN_NAME
+
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/deployment.rendered.yml
