--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: front-service
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: himedia-a.com.
 spec:
   type: LoadBalancer #CLB로 진행 ALB는 ingress필요함
   selector:
