--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -5,10 +5,13 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/hostname: himedia-a.com.
 spec:
-  type: LoadBalancer #CLB로 진행 ALB는 ingress필요함
+  type: LoadBalancer
   selector:
     app: front-service
   ports:
     - protocol: TCP
-      port: 80
+      port: 80          # 외부 HTTP 요청 → Spring의 80번 포트 (리디렉션 용)
+      targetPort: 80
+    - protocol: TCP
+      port: 443         # 외부 HTTPS 요청 → Spring의 9000번 포트 (실서비스)
       targetPort: 9000
