--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -30,6 +30,7 @@ spec:
               memory: "1024Mi"
           ports:
             - containerPort: 9000
+            - containerPort: 80
           env:
             - name: EDGE_SERVICE_URL
               value: http://edge-service:80
