--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -13,7 +13,9 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
+      nodePort: 30080
     - name: https
       protocol: TCP
       port: 443
       targetPort: 9000
+      nodePort: 30443
