--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -5,10 +5,17 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/hostname: himedia-a.com.
 spec:
-  type: LoadBalancer #CLB로 진행 ALB는 ingress필요함
+  type: LoadBalancer
   selector:
     app: front-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 9000
+      nodePort: 30080
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 9000
+      nodePort: 30443
