--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -42,7 +42,7 @@ spec:
             - name: TOKEN_REDIRECT_URL
               value:  http://$DOMAIN_NAME/oauth/token/
             - name: WEBSOCKET_URL
-              value:  wss://ws.himedia-a.com/delivery-location
+              value:  https://ws.himedia-a.com/delivery-location
             - name: SPRING_PROFILES_ACTIVE
               value: deploy
             - name: KAKAO_REST_API_KEY
