--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -4,7 +4,7 @@ metadata:
   name: front-service
   annotations:
     external-dns.alpha.kubernetes.io/hostname: himedia-a.com.
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-northeast-2:448049828702:certificate/37cca9bd-5f04-43ac-92b7-1f54ccb7979a
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${AWS_CERTIFICATE_FRONT}
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
     service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
